--- a/index.html
+++ b/index.html
@@ -8,12 +8,38 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <p>This is a simple static website hosted on GitHub Pages.</p>
+        <h1>Welcome to WazirEA</h1>
+        <p>One stop place to answer all your queries for Wazir Expert Advisor on Exness.</p>
     </header>
+
+    <!-- Main Content Section -->
+    <main>
+        <section>
+            <h2>Introduction</h2>
+            <p>WazirEA is a powerful Expert Advisor designed to automate trading on Exness. Learn all about its features and how to use it efficiently on this platform.</p>
+        </section>
+
+        <section>
+            <h2>Key Features</h2>
+            <ul>
+                <li>Automated Trading</li>
+                <li>High Performance</li>
+                <li>Compatible with Exness</li>
+                <li>Customizable Settings</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Get Started</h2>
+            <p>To get started with WazirEA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
+            <button id="learnMoreBtn">Learn More</button>
+        </section>
+    </main>
+
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; 2025 WazirEA. All rights reserved.</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
