--- a/index.html
+++ b/index.html
@@ -34,30 +34,34 @@
             <p>To get started with WazirEA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
             <button id="learnMoreBtn">Learn More</button>
         </section>
+
+        <!-- Table Section for Google Sheets -->
+        <section>
+            <h2>Google Sheets</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Link</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>NSE Market Analysis</td>
+                        <td>Understand Relative Strength, Index Contributions, Sector and Industry Watch for NSE Stocks</td>
+                        <td><a href="https://docs.google.com/spreadsheets/d/1Vhm4jxmzPRtZAqL4fKTagi7cEIzAanPbHIK-e9AXv48/edit?gid=0#gid=0" target="_blank">Link</a></td>
+                    </tr>
+                    <tr>
+                        <td>Option Chain - Greeks and Gex</td>
+                        <td>Option Chain of major NSE/BSE indices with Volume, OI, Oi Chg and Gex charts</td>
+                        <td><a href="https://iluvmarkets.github.io/oc/" target="_blank">Link</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
 
-    <div class="container">
-        <h1>Google Sheets</h1>
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Link</th>
-    
-            </tr>
-            <tr>
-                <td>NSE Market Analysis</td>
-                <td>Understand Relative Strength, Index Contributions, Sector and Industry Watch for NSE Stocks</td>
-                <td><a href="https://docs.google.com/spreadsheets/d/1Vhm4jxmzPRtZAqL4fKTagi7cEIzAanPbHIK-e9AXv48/edit?gid=0#gid=0">Link</a></td>
-            </tr>
-            <tr>
-                <td>Option Chain - Greeks and Gex</td>
-                <td>Option Chain of major NSE/BSE indices with Volume, OI, Oi Chg and Gex charts</td>
-                <td><a href="https://iluvmarkets.github.io/oc/">Link</a></td>
-            </tr>
-        </table>
-    </div>    
-    
     <footer>
         <p>&copy; 2025 WazirEA. All rights reserved.</p>
     </footer>
