--- a/index.html
+++ b/index.html
@@ -32,30 +32,29 @@
         <section>
             <h2>Get Started</h2>
             <p>To get started with WazirEA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
-            <button id="learnMoreBtn">Learn More</button>
         </section>
 
         <!-- Table Section for Google Sheets -->
         <section>
-            <h2>Google Sheets</h2>
+            <h2>Steps to get access to the Expert Advisor</h2>
             <table>
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>Task</th>
                         <th>Description</th>
                         <th>Link</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>NSE Market Analysis</td>
-                        <td>Understand Relative Strength, Index Contributions, Sector and Industry Watch for NSE Stocks</td>
-                        <td><a href="https://docs.google.com/spreadsheets/d/1Vhm4jxmzPRtZAqL4fKTagi7cEIzAanPbHIK-e9AXv48/edit?gid=0#gid=0" target="_blank">Link</a></td>
+                        <td>Join Logical Traders Telegram Group</td>
+                        <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
+                        <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
                     </tr>
                     <tr>
-                        <td>Option Chain - Greeks and Gex</td>
-                        <td>Option Chain of major NSE/BSE indices with Volume, OI, Oi Chg and Gex charts</td>
-                        <td><a href="https://iluvmarkets.github.io/oc/" target="_blank">Link</a></td>
+                        <td>Open an Exness Account</td>
+                        <td>Open an Exness account using the link provided</td>
+                        <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank">Link</a></td>
                     </tr>
                 </tbody>
             </table>
