--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <tbody>
                     <tr>
                         <td>Join Logical Traders Telegram Group</td>
-                        <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
+                        <td>Join the Logical Traders Telegram Group to connect with like-minded individuals</td>
                         <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
                     </tr>
                     <tr>
