--- a/index.html
+++ b/index.html
@@ -48,13 +48,18 @@
                 <tbody>
                     <tr>
                         <td>Join Logical Traders Telegram Group</td>
-                        <td>Join the Logical Traders Telegram Group to connect with like-minded individuals</td>
+                        <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
                         <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
                     </tr>
                     <tr>
                         <td>Open an Exness Account</td>
                         <td>Open an Exness account using the link provided</td>
                         <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank">Link</a></td>
+                    </tr>
+                    <tr>
+                        <td>DM the owner of EA on telegram</td>
+                        <td>OOnce your account is opened message the owner of EA on telegram to grant you access to exclusive group</td>
+                        <td><a href="@zubarekhan01" target="_blank">Link</a></td>
                     </tr>
                 </tbody>
             </table>
