--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td>Follow on X </td>
+                        <td>Follow on X for future updates</td>
+                        <td><a href="https://www.twitter.com/khanzubare" target="_blank">Link</a></td>
+                    </tr>
+                    <tr>
+                        <td>Follow on Instagram </td>
+                        <td>Follow on Intagram for daily updates</td>
+                        <td><a href="https://www.instagram.com/zubare/" target="_blank">Link</a></td>
+                    </tr>
+                    <tr>
                         <td>Join Logical Traders Telegram Group</td>
                         <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
                         <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
@@ -58,8 +68,8 @@
                     </tr>
                     <tr>
                         <td>DM the owner of EA on telegram</td>
-                        <td>OOnce your account is opened message the owner of EA on telegram to grant you access to exclusive group</td>
-                        <td><a href="@zubarekhan01" target="_blank">Link</a></td>
+                        <td>Once your account is opened message the owner of EA on telegram to grant you access to exclusive group</td>
+                        <td><a href="t.me/zubarekhan01" target="_blank">Link</a></td>
                     </tr>
                 </tbody>
             </table>
