--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>To get started with WazirEA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
         </section>
 
-        <!-- Table Section for Google Sheets -->
+        <!-- Table Section for Access to Expert Advisor -->
         <section>
             <h2>Steps to get access to the Expert Advisor</h2>
             <table>
@@ -74,6 +74,33 @@
                 </tbody>
             </table>
         </section>
+
+                <!-- Table Section for Access to TradingView Indicator -->
+                <section>
+                    <h2>Steps to get access to the Expert Advisor</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Task</th>
+                                <th>Description</th>
+                                <th>Link</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Get Access to Wazir Algo Trading View Indicator </td>
+                                <td>Contact the owner on telegram to get invite to Trading View indicator</td>
+                                <td><a href="https://www.tradingview.com/v/HNoRMThe/" target="_blank">Link</a></td>
+                            </tr>
+                            <tr>
+                                <td>Wazir Algo indicator settings and use</td>
+                                <td>Watch the Youtube Videos on how best to make use of Wazir Algo Indicator</td>
+                                <td><a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank">Link</a></td>
+                                <td><a href="https://www.youtube.com/watch?v=BAs0OYaBsuE target="_blank">Link</a></td>                                
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
     </main>
 
     <footer>
