--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
                             </tr>
                             <tr>
                                 <td>Wazir Algo indicator settings and use</td>
-                                <td>Watch the Youtube Videos on how best to make use of Wazir Algo Indicator</td>
-                                <td><a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank">Link</a></td>
-                                <td><a href="https://www.youtube.com/watch?v=BAs0OYaBsuE target="_blank">Link</a></td>                                
+                                <td>Watch the YouTube Videos on how best to make use of Wazir Algo Indicator</td>
+                                <td>
+                                    <div><a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank">Link 1</a></div>
+                                    <div><a href="https://www.youtube.com/watch?v=BAs0OYaBsuE" target="_blank">Link 2</a></div> <!-- Links stacked vertically -->
+                                </td>
                             </tr>
                         </tbody>
                     </table>
