--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                 <!-- Table Section for Access to TradingView Indicator -->
                 <section>
-                    <h2>Steps to get access to the Expert Advisor</h2>
+                    <h2>Steps to get access to the TradingView Indicator</h2>
                     <table>
                         <thead>
                             <tr>
