--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td>Open an Exness Account</td>
-                        <td>Open an Exness account using the link provided</td>
+                        <td>Open an Exness account using the link provided once registered owner will verify if the account has been opened using the link provided</td>
                         <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank">Link</a></td>
                     </tr>
                     <tr>
