--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <tbody>
                             <tr>
                                 <td>Get Access to Wazir Algo Trading View Indicator </td>
-                                <td>Contact the owner on telegram to get invite to Trading View indicator</td>
+                                <td>Contact the owner on telegram to get invite to Trading View indicator. Indicator is free for use</td>
                                 <td><a href="https://www.tradingview.com/v/HNoRMThe/" target="_blank">Link</a></td>
                             </tr>
                             <tr>
@@ -103,6 +103,36 @@
                         </tbody>
                     </table>
                 </section>
+                                <!-- Table Section for Different Types of Expert Advisors -->
+                                <section>
+                                    <h2>Different Types of Expert Advisors</h2>
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>EA Type</th>
+                                                <th>Description</th>
+                                                <th>Link</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>GOLD EA for MT4</td>
+                                                <td>Designed for XAUUSD on MT4 for auto trading. This free EA for XAUUSD on MT4 requires monthly activation. Contact the owner on Telegram for details.</td>
+                                                <td><a href="t.me/zubarekhan01" target="_blank">Link</a></td>
+                                            </tr>
+                                            < <tr>
+                                                <td>GOLD EA for MT5</td>
+                                                <td>Designed for XAUUSD on MT5 for auto trading. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
+                                                <td><a href="t.me/zubarekhan01" target="_blank">Link</a></td>
+                                            </tr>
+                                            < <tr>
+                                                <td>Descretionary GOLD EA for MT5</td>
+                                                <td>Designed for XAUUSD on MT5 for taking Descretionary trades. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
+                                                <td><a href="https://t.me/zubarekhan/4277" target="_blank">Link</a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </section>
     </main>
 
     <footer>
