--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to WazirEA</h1>
+        <h1>Welcome to WazirAlgo EA</h1>
         <p>One stop place to answer all your queries for Wazir Expert Advisor on Exness.</p>
     </header>
 
@@ -16,7 +16,7 @@
     <main>
         <section>
             <h2>Introduction</h2>
-            <p>WazirEA is a powerful Expert Advisor designed to automate trading on Exness. Learn all about its features and how to use it efficiently on this platform.</p>
+            <p>WazirAlgo EA is a powerful Expert Advisor designed to automate trading on Exness. Learn all about its features and how to use it efficiently on this platform.</p>
         </section>
 
         <section>
@@ -31,7 +31,7 @@
 
         <section>
             <h2>Get Started</h2>
-            <p>To get started with WazirEA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
+            <p>To get started with WazirAlgo EA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
         </section>
 
         <!-- Table Section for Access to Expert Advisor -->
