--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Welcome to WazirAlgo EA</h1>
-        <p>One stop place to answer all your queries for Wazir Expert Advisor on Exness.</p>
+        <p>One stop place to answer all your queries for WazirAlog Expert Advisor on Exness.</p>
     </header>
 
     <!-- Main Content Section -->
