--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </ul>
         </section>
 
+<div class="container">
         <section>
             <h2>Get Started</h2>
             <p>To get started with WazirAlgo EA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
@@ -134,6 +135,8 @@
                 </tbody>
             </table>
         </section>
+</div>
+
     </main>
 
     <footer>
