--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wazir Expert Advisor</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to WazirAlgo EA</h1>
-        <p>One stop place to answer all your queries for WazirAlog Expert Advisor on Exness.</p>
+        <p>One stop place to answer all your queries for WazirAlgo Expert Advisor on Exness.</p>
     </header>
 
     <!-- Main Content Section -->
@@ -29,114 +31,115 @@
             </ul>
         </section>
 
-<div class="container">
-        <section>
-            <h2>Get Started</h2>
-            <p>To get started with WazirAlgo EA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
-        </section>
+        <!-- Container for main content sections -->
+        <div class="container">
+            <section>
+                <h2>Get Started</h2>
+                <p>To get started with WazirAlgo EA, follow the setup instructions in our guide, and you'll be ready to automate your trading strategies with ease.</p>
+            </section>
 
-        <!-- Table Section for Access to Expert Advisor -->
-        <section>
-            <h2>Steps to get access to the Expert Advisor</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Task</th>
-                        <th>Description</th>
-                        <th>Link</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Follow on X</td>
-                        <td>Follow on X for future updates</td>
-                        <td><a href="https://www.twitter.com/khanzubare" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>Follow on Instagram</td>
-                        <td>Follow on Instagram for daily updates</td>
-                        <td><a href="https://www.instagram.com/zubare/" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>Join Logical Traders Telegram Group</td>
-                        <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
-                        <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>Open an Exness Account</td>
-                        <td>Open an Exness account using the link provided. Once registered, the owner will verify if the account has been opened using the link provided.</td>
-                        <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>DM the owner of EA on telegram</td>
-                        <td>Once your account is opened, message the owner of EA on telegram to grant you access to the exclusive group</td>
-                        <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+            <!-- Table Section for Access to Expert Advisor -->
+            <section>
+                <h2>Steps to get access to the Expert Advisor</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Task</th>
+                            <th>Description</th>
+                            <th>Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Follow on X</td>
+                            <td>Follow on X for future updates</td>
+                            <td><a href="https://www.twitter.com/khanzubare" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>Follow on Instagram</td>
+                            <td>Follow on Instagram for daily updates</td>
+                            <td><a href="https://www.instagram.com/zubare/" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>Join Logical Traders Telegram Group</td>
+                            <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
+                            <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>Open an Exness Account</td>
+                            <td>Open an Exness account using the link provided. Once registered, the owner will verify if the account has been opened using the link provided.</td>
+                            <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>DM the owner of EA on telegram</td>
+                            <td>Once your account is opened, message the owner of EA on telegram to grant you access to the exclusive group</td>
+                            <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
 
-        <!-- Table Section for Access to TradingView Indicator -->
-        <section>
-            <h2>Steps to get access to the TradingView Indicator</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Task</th>
-                        <th>Description</th>
-                        <th>Link</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Get Access to Wazir Algo Trading View Indicator</td>
-                        <td>Contact the owner on telegram to get an invite to Trading View indicator. The indicator is free for use.</td>
-                        <td><a href="https://www.tradingview.com/v/HNoRMThe/" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>Wazir Algo indicator settings and use</td>
-                        <td>Watch the YouTube Videos on how best to make use of Wazir Algo Indicator</td>
-                        <td>
-                            <div><a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank">Link 1</a></div>
-                            <div><a href="https://www.youtube.com/watch?v=BAs0OYaBsuE" target="_blank">Link 2</a></div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+            <!-- Table Section for Access to TradingView Indicator -->
+            <section>
+                <h2>Steps to get access to the TradingView Indicator</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Task</th>
+                            <th>Description</th>
+                            <th>Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Get Access to Wazir Algo Trading View Indicator</td>
+                            <td>Contact the owner on telegram to get an invite to Trading View indicator. The indicator is free for use.</td>
+                            <td><a href="https://www.tradingview.com/v/HNoRMThe/" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>Wazir Algo indicator settings and use</td>
+                            <td>Watch the YouTube Videos on how best to make use of Wazir Algo Indicator</td>
+                            <td>
+                                <div><a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank">Link 1</a></div>
+                                <div><a href="https://www.youtube.com/watch?v=BAs0OYaBsuE" target="_blank">Link 2</a></div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
 
-        <!-- Table Section for Different Types of Expert Advisors -->
-        <section>
-            <h2>Different Types of Expert Advisors</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>EA Type</th>
-                        <th>Description</th>
-                        <th>Link</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>GOLD EA for MT4</td>
-                        <td>Designed for XAUUSD on MT4 for auto trading. This free EA for XAUUSD on MT4 requires monthly activation. Contact the owner on Telegram for details.</td>
-                        <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>GOLD EA for MT5</td>
-                        <td>Designed for XAUUSD on MT5 for auto trading. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
-                        <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
-                    </tr>
-                    <tr>
-                        <td>Discretionary GOLD EA for MT5</td>
-                        <td>Designed for XAUUSD on MT5 for taking Discretionary trades. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
-                        <td><a href="https://t.me/zubarekhan/4277" target="_blank">Link</a></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-</div>
-
+            <!-- Table Section for Different Types of Expert Advisors -->
+            <section>
+                <h2>Different Types of Expert Advisors</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>EA Type</th>
+                            <th>Description</th>
+                            <th>Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>GOLD EA for MT4</td>
+                            <td>Designed for XAUUSD on MT4 for auto trading. This free EA for XAUUSD on MT4 requires monthly activation. Contact the owner on Telegram for details.</td>
+                            <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>GOLD EA for MT5</td>
+                            <td>Designed for XAUUSD on MT5 for auto trading. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
+                            <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>Discretionary GOLD EA for MT5</td>
+                            <td>Designed for XAUUSD on MT5 for taking Discretionary trades. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
+                            <td><a href="https://t.me/zubarekhan/4277" target="_blank">Link</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
+        <!-- End of container -->
     </main>
 
     <footer>
@@ -145,4 +148,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
