--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
                     </tbody>
                 </table>
             </section>
+
+            <!-- Table Section for Setting up Expert Advisors for beginners -->
+            <section>
+                <h2>Setting up Expert Advisors for beginners</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>EA Type</th>
+                            <th>Description</th>
+                            <th>Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Setting GOLD EA for MT4 & MT5 </td>
+                            <td>Refer to the link to setup Expert Advisors for MT4 & MT5</td>
+                            <td><a href="https://t.me/logicaltraders07/250138" target="_blank">Link</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+
+
         </div>
         <!-- End of container -->
     </main>
