--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
                         <tr>
                             <td>Follow on X</td>
                             <td>Follow on X for future updates</td>
-                            <td><a href="https://www.twitter.com/khanzubare" target="_blank">Link</a></td>
+                            <td><a href="https://www.twitter.com/khanzubare" target="_blank" aria-label="Follow on Twitter">Link</a></td>
                         </tr>
                         <tr>
                             <td>Follow on Instagram</td>
                             <td>Follow on Instagram for daily updates</td>
-                            <td><a href="https://www.instagram.com/zubare/" target="_blank">Link</a></td>
+                            <td><a href="https://www.instagram.com/zubare/" target="_blank" aria-label="Follow on Instagram">Link</a></td>
                         </tr>
                         <tr>
                             <td>Join Logical Traders Telegram Group</td>
-                            <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis</td>
-                            <td><a href="https://t.me/logicaltraders07" target="_blank">Link</a></td>
+                            <td>Join the Logical Traders Telegram Group to connect with like-minded individuals, share insights, and stay updated on the latest trends in trading strategies and market analysis.</td>
+                            <td><a href="https://t.me/logicaltraders07" target="_blank" aria-label="Join Logical Traders Telegram Group">Link</a></td>
                         </tr>
                         <tr>
                             <td>Open an Exness Account</td>
                             <td>Open an Exness account using the link provided. Once registered, the owner will verify if the account has been opened using the link provided.</td>
-                            <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank">Link</a></td>
+                            <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank" aria-label="Open Exness Account">Link</a></td>
                         </tr>
                         <tr>
-                            <td>DM the owner of EA on telegram</td>
-                            <td>Once your account is opened, message the owner of EA on telegram to grant you access to the exclusive group</td>
-                            <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
+                            <td>DM the owner of EA on Telegram</td>
+                            <td>Once your account is opened, message the owner of EA on Telegram to grant you access to the exclusive group.</td>
+                            <td><a href="https://t.me/zubarekhan01" target="_blank" aria-label="Message the EA Owner on Telegram">Link</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -92,16 +92,16 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Get Access to Wazir Algo Trading View Indicator</td>
-                            <td>Contact the owner on telegram to get an invite to Trading View indicator. The indicator is free for use.</td>
-                            <td><a href="https://www.tradingview.com/v/HNoRMThe/" target="_blank">Link</a></td>
+                            <td>Get Access to Wazir Algo TradingView Indicator</td>
+                            <td>Contact the owner on Telegram to get an invite to TradingView indicator. The indicator is free for use.</td>
+                            <td><a href="https://www.tradingview.com/v/HNoRMThe/" target="_blank" aria-label="TradingView Indicator">Link</a></td>
                         </tr>
                         <tr>
                             <td>Wazir Algo indicator settings and use</td>
-                            <td>Watch the YouTube Videos on how best to make use of Wazir Algo Indicator</td>
+                            <td>Watch the YouTube videos on how best to make use of the Wazir Algo Indicator.</td>
                             <td>
-                                <div><a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank">Link 1</a></div>
-                                <div><a href="https://www.youtube.com/watch?v=BAs0OYaBsuE" target="_blank">Link 2</a></div>
+                                <a href="https://www.youtube.com/watch?v=i1KD-r0Oc_0" target="_blank" aria-label="YouTube Video 1">Link 1</a><br>
+                                <a href="https://www.youtube.com/watch?v=BAs0OYaBsuE" target="_blank" aria-label="YouTube Video 2">Link 2</a>
                             </td>
                         </tr>
                     </tbody>
@@ -123,17 +123,17 @@
                         <tr>
                             <td>GOLD EA for MT4</td>
                             <td>Designed for XAUUSD on MT4 for auto trading. This free EA for XAUUSD on MT4 requires monthly activation. Contact the owner on Telegram for details.</td>
-                            <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
+                            <td><a href="https://t.me/zubarekhan01" target="_blank" aria-label="Contact for GOLD EA MT4">Link</a></td>
                         </tr>
                         <tr>
                             <td>GOLD EA for MT5</td>
                             <td>Designed for XAUUSD on MT5 for auto trading. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
-                            <td><a href="https://t.me/zubarekhan01" target="_blank">Link</a></td>
+                            <td><a href="https://t.me/zubarekhan01" target="_blank" aria-label="Contact for GOLD EA MT5">Link</a></td>
                         </tr>
                         <tr>
                             <td>Discretionary GOLD EA for MT5</td>
                             <td>Designed for XAUUSD on MT5 for taking Discretionary trades. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
-                            <td><a href="https://t.me/zubarekhan/4277" target="_blank">Link</a></td>
+                            <td><a href="https://t.me/zubarekhan/4277" target="_blank" aria-label="Contact for Discretionary GOLD EA MT5">Link</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -152,15 +152,13 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Setting GOLD EA for MT4 & MT5 </td>
+                            <td>Setting GOLD EA for MT4 & MT5</td>
                             <td>Refer to the link to setup Expert Advisors for MT4 & MT5</td>
-                            <td><a href="https://t.me/logicaltraders07/250138" target="_blank">Link</a></td>
+                            <td><a href="https://t.me/logicaltraders07/250138" target="_blank" aria-label="Setup GOLD EA for MT4 & MT5">Link</a></td>
                         </tr>
                     </tbody>
                 </table>
             </section>
-
-
         </div>
         <!-- End of container -->
     </main>
