--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@
                             <td>Refer to the link to setup Expert Advisors for MT4 & MT5</td>
                             <td><a href="https://t.me/logicaltraders07/250138" target="_blank" aria-label="Setup GOLD EA for MT4 & MT5">Link</a></td>
                         </tr>
+                        <tr>
+                            <td>Attach MT4 EA to multiple instruments</td>
+                            <td>Refer to the link to setup Expert Advisors for MT4 on multiple instruments</td>
+                            <td><a href="https://www.youtube.com/watch?v=Quh-G-y4Ojg" target="_blank" aria-label="Attach MT4 EA to multiple instruments">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>How to run multiple Meta Trader instances on a PC</td>
+                            <td>Refer to the link to setup Meta Trader instances on a PC</td>
+                            <td><a href="https://www.youtube.com/watch?v=masFD22_faE" target="_blank" aria-label="Setup Meta Trader instances on a PC">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>How add EA bot in MT5</td>
+                            <td>Refer to the link to setup EA bot in MT5</td>
+                            <td><a href="https://www.youtube.com/watch?v=i43tE2NnWpQ" target="_blank" aria-label="setup EA bot in MT5">Link</a></td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
