--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>WazirAlgo Expert Advisor</h1>
+        <h1>WazirAlgo</h1>
         <p>Explore the features of the WazirAlgo Expert Advisor and maximize your trading on Exness.</p>
     </header>
 
