--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wazir Expert Advisor - Your New Trading Companion</title>
+    <title>WazirAlgo Expert Advisor - Your New Trading Companion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -174,6 +174,28 @@
                     </tbody>
                 </table>
             </section>
+
+                        <!-- FAQ Section -->
+                        <section id="faq">
+                            <h2>Frequently Asked Questions (FAQ)</h2>
+                            <div class="faq-item">
+                                <h3>What is WazirAlgo EA?</h3>
+                                <p>WazirAlgo EA is an Expert Advisor designed to automate trading on Exness. It uses advanced algorithms to help you trade efficiently and profitably.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>How do I get started with WazirAlgo EA?</h3>
+                                <p>To get started, simply follow the steps outlined in the "Get Started" section, including setting up your Exness account and contacting the owner for access to the EA.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>Can I use WazirAlgo EA on any trading platform?</h3>
+                                <p>Currently, WazirAlgo EA is compatible with Exness and is designed for use with MetaTrader 4 (MT4) and MetaTrader 5 (MT5).</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>Is the WazirAlgo TradingView Indicator free?</h3>
+                                <p>Yes, the WazirAlgo TradingView Indicator is free for use. You can contact the owner for an invite to access it.</p>
+                            </div>
+                        </section>
+                        
         </div>
         <!-- End of container -->
     </main>
