--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                             <td>Designed for XAUUSD on MT5 for taking Discretionary trades. This free EA for XAUUSD on MT5 requires monthly activation. Contact the owner on Telegram for details.</td>
                             <td><a href="https://t.me/zubarekhan/4277" target="_blank" aria-label="Contact for Discretionary GOLD EA MT5">Link</a></td>
                         </tr>
+                        <tr>
+                            <td>Illuminati Wazir AI Currency EA for MT4</td>
+                            <td>Created by Illuminati an experience trader of the group for Currency trading. Contact the owner on Telegram for details. Link for the video</td>
+                            <td><a href="https://t.me/zubarekhan/3904" target="_blank" aria-label="Contact for Discretionary GOLD EA MT5">Link</a></td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
@@ -195,7 +200,7 @@
                                 <p>Yes, the WazirAlgo TradingView Indicator is free for use. You can contact the owner for an invite to access it.</p>
                             </div>
                         </section>
-                        
+
         </div>
         <!-- End of container -->
     </main>
