--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                             <td><a href="https://one.exnesstrack.org/a/bo0jqnz2n6" target="_blank" aria-label="Open Exness Account">Link</a></td>
                         </tr>
                         <tr>
+                            <td>For existing Exness Account users</td>
+                            <td>Use the partner change link given to move your account to Wazir Algo. Once registered, the owner will verify if the account has been opened using the link provided.</td>
+                            <td><a href="https://docs.google.com/document/d/1lEPK-DK8-mPjYtzUpOUh4vuN5re66jeVF4OQ5ev_9KI/edit" target="_blank" aria-label="Partner change account for WazirAlgo">Link</a></td>
+                        </tr>
+                        <tr>
                             <td>DM the owner of EA on Telegram</td>
                             <td>Once your account is opened, message the owner of EA on Telegram to grant you access to the exclusive group.</td>
                             <td><a href="https://t.me/zubarekhan01" target="_blank" aria-label="Message the EA Owner on Telegram">Link</a></td>
